# spark_lineage_tool

./: .gitignore  LICENSE  README.md  REAL_WORLD_VALIDATION.md  TDD_COMPLETION_REPORT.md  build.sbt  pyproject.toml  requirements.txt
config/: default_config.yaml  example_runtime_vars.yaml  prod_env.yaml
docs/: architecture.md  examples.md  rule_engine.md
scripts/: analyze_lineage_report.py  run_with_resolution.py  test_all_extractors_variables.py  test_code_based_resolution.py  test_pyspark_resolution.py
src/lineage/: __init__.py  cli.py  config.py
src/lineage/crawler/: __init__.py  file_crawler.py  type_detector.py
src/lineage/exporters/: __init__.py  csv_exporter.py  db_exporter.py  excel_exporter.py  html_exporter.py  json_exporter.py
src/lineage/extractors/: __init__.py  base.py  config_extractor.py  hive_extractor.py  java_extractor.py  method_call_tracker.py  nifi_extractor.py  pyspark_extractor.py  scala_extractor.py  shell_extractor.py
src/lineage/ir/: __init__.py  fact.py  store.py
tests/integration/: test_cross_script_resolution.py  test_e2e_pipeline.py  test_pipeline_lineage.py
tests/mocks/: generate_mocks.sh
tests/unit/: test_comprehensive_pipelines.py  test_enhanced_resolution.py  test_extractors.py  test_extractors_comprehensive.py  test_interprocedural_analysis.py  test_java_udfs.py  test_modular_applications.py  test_nifi_extraction.py  test_report_generation.py  test_resolution_fixes.py  test_scala_resolution.py  test_schema_qualified_tables.py  test_sftp_mock_scripts.py  test_sftp_rdbms_extraction.py  test_spark_sftp.py  test_spark_submit.py  test_springml_sftp.py  test_timestamp_handling.py  test_variable_resolution.py
(+139 files in other folders)
